# sunrush

./: Cargo.toml  IMPLEMENTATION.md  README.md  config.toml
core/abi/: Cargo.toml
core/abi/src/: host_contract.rs  lib.rs  plugin_contract.rs
core/sb/: Cargo.toml
core/sb/src/: lib.rs  messages.rs
crates/abi/: Cargo.toml
crates/abi/src/: lib.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: config.rs  lib.rs  main.rs  plugin_manager.rs  telemetry.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  MONITORING.md  PLUGIN_DEVELOPMENT.md
host/: Cargo.toml
host/src/: host_contract_impl.rs  main.rs
test_plugin/: Cargo.toml
test_plugin/src/: lib.rs
