[package]
name = "sunrush-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sunrush-host"
path = "src/main.rs"

[dependencies]
sunrush-types = { path = "../types" }
sunrush-abi = { path = "../abi" }
sunrush-bus = { path = "../bus" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Dynamic loading
libloading = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Web server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
bytes = "1.5"
parking_lot = "0.12"
notify = "6.1"
